<resources>
    <string name="app_name">GENCARA</string>
    <string name="hello">Halo,</string>
    <string name="save">Simpan</string>
    <string name="name">Nama</string>
    <string name="email">Email</string>
    <string name="password">Kata sandi</string>
    <string name="edit_profile">Edit Profil</string>
    <string name="profile">Profil</string>
    <string name="language">Bahasa</string>
    <string name="contact_us">Hubungi kami</string>
    <string name="about">Tentang Gencara</string>
    <string name="logout">Keluar</string>
    <string name="home">Beranda</string>
    <string name="back">Kembali</string>
    <string name="username">Nama Pengguna</string>
    <string name="user_email">user@email.com</string>
    <string name="learn">Ayo mulai belajar!</string>
    <string name="searchbar_hint">Mau latihan apa?</string>
    <string name="practice">Latihan</string>
    <string name="hint">Sign Name</string>
    <string name="logo">Logo</string>
    <string name="title_welcome">Selamat datang di Gencara</string>
    <string name="sub_title_welcome">Belajar BISINDO jadi seru dan menyenangkan!</string>
    <string name="google">Lanjutkan dengan Google</string>
    <string name="web_client_id">145022948142-j77pg05468o1onou6t1ckdhlnn0qi5t4.apps.googleusercontent.com</string>
    <string name="max_name_length_error">Maksimal 15 karakter</string>
    <string name="profile_update_failed">Profil gagal diperbaharui</string>
    <string name="profile_updated">Profil berhasil diperbaharui</string>


    <string-array name="data_menu">
        <item>Alfabet</item>
        <item>Makanan</item>
        <item>Olahraga</item>
        <item>Hobi</item>
        <item>Pekerjaan</item>
        <item>Pakaian</item>
        <item>Permainan</item>
        <item>Ukuran</item>
        <item>Perasaan</item>
        <item>Posisi</item>
        <item>Objek</item>
        <item>Waktu</item>
        <item>Kendaraan</item>
        <item>Keluarga</item>
        <item>Hewan</item>
    </string-array>

    <integer-array name="data_icon">
        <item>@drawable/alfabet</item>
        <item>@drawable/makanan</item>
        <item>@drawable/olahraga</item>
        <item>@drawable/hobi</item>
        <item>@drawable/pekerjaan</item>
        <item>@drawable/pakaian</item>
        <item>@drawable/permainan</item>
        <item>@drawable/ukuran</item>
        <item>@drawable/perasaan</item>
        <item>@drawable/posisi</item>
        <item>@drawable/objek</item>
        <item>@drawable/waktu</item>
        <item>@drawable/kendaraan</item>
        <item>@drawable/keluarga</item>
        <item>@drawable/hewan</item>
    </integer-array>

    <string-array name="data_alphabet_name">
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>
        <item>E</item>
        <item>F</item>
        <item>G</item>
        <item>H</item>
        <item>I</item>
        <item>J</item>
        <item>K</item>
        <item>L</item>
        <item>M</item>
        <item>N</item>
        <item>O</item>
        <item>P</item>
        <item>Q</item>
        <item>R</item>
        <item>S</item>
        <item>T</item>
        <item>U</item>
        <item>V</item>
        <item>W</item>
        <item>X</item>
        <item>Y</item>
        <item>Z</item>
    </string-array>

    <integer-array name="data_alphabet">
        <item>@drawable/a</item>
        <item>@drawable/b</item>
        <item>@drawable/c</item>
        <item>@drawable/d</item>
        <item>@drawable/e</item>
        <item>@drawable/f</item>
        <item>@drawable/g</item>
        <item>@drawable/h</item>
        <item>@drawable/i</item>
        <item>@drawable/j</item>
        <item>@drawable/k</item>
        <item>@drawable/l</item>
        <item>@drawable/m</item>
        <item>@drawable/n</item>
        <item>@drawable/o</item>
        <item>@drawable/p</item>
        <item>@drawable/q</item>
        <item>@drawable/r</item>
        <item>@drawable/s</item>
        <item>@drawable/t</item>
        <item>@drawable/u</item>
        <item>@drawable/v</item>
        <item>@drawable/w</item>
        <item>@drawable/x</item>
        <item>@drawable/y</item>
        <item>@drawable/z</item>
    </integer-array>

    <string-array name="data_question">
        <item>Soal 1</item>
        <item>Soal 2</item>
        <item>Soal 3</item>
        <item>Soal 4</item>
        <item>Soal 5</item>
        <item>Soal 6</item>
        <item>Soal 7</item>
        <item>Soal 8</item>
        <item>Soal 9</item>
        <item>Soal 10</item>
    </string-array>
</resources>