<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.EditProfileActivity"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    android:background="@color/white"
    android:fitsSystemWindows="true">

    <ImageButton
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:contentDescription="@string/back"
        android:src="@drawable/btn_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tv_title_edit_profile"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:gravity="center"
        android:text="@string/edit_profile"
        android:textSize="32sp"
        android:textStyle="bold"
        android:textColor="@color/not_so_black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:fontFamily="@font/inter_bold"/>

    <TextView
        android:id="@+id/tv_save"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:gravity="center_horizontal"
        android:text="@string/save"
        android:textColor="@color/purple"
        android:textSize="18sp"
        android:textStyle="bold"
        android:fontFamily="@font/inter_bold"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_edit_profile"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="16dp"/>

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/iv_profile"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="25dp"
        android:scaleType="centerCrop"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_edit_profile"
        app:riv_corner_radius="50dp"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/name"
        android:textColor="@color/not_so_black"
        android:textSize="16sp"
        android:textStyle="bold"
        android:fontFamily="@font/inter_bold"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toBottomOf="@+id/iv_profile"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/edit_name"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/edit_text_border"
        android:hint="@string/username"
        android:inputType="text"
        android:padding="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/inter_regular"
        app:layout_constraintTop_toBottomOf="@+id/tv_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/email"
        android:textColor="@color/not_so_black"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginStart="20dp"
        android:fontFamily="@font/inter_bold"
        app:layout_constraintTop_toBottomOf="@+id/edit_name"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/edit_email"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/edit_text_border"
        android:hint="@string/user_email"
        android:padding="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/inter_regular"
        android:enabled="false"
        app:layout_constraintTop_toBottomOf="@+id/tv_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>
