<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".ui.profile.ProfileFragment"
    android:padding="16dp"
    android:background="@color/white">

    <TextView
        android:id="@+id/tv_profile"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:gravity="center"
        android:text="@string/profile"
        android:textSize="32sp"
        android:textStyle="bold"
        android:textColor="@color/not_so_black"
        android:fontFamily="@font/inter_bold"/>

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/iv_profile"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:scaleType="centerCrop"
        tools:src="@tools:sample/avatars"
        app:riv_corner_radius="50dp"/>

    <TextView
        android:id="@+id/tv_user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textSize="22sp"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="@color/not_so_black"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/inter_bold"/>

    <TextView
        android:id="@+id/tv_edit_profile"
        android:layout_width="match_parent"
        android:layout_height="30sp"
        android:text="@string/edit_profile"
        android:textSize="15sp"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="@color/link"
        android:fontFamily="@font/inter_bold"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/btn_language"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:cardCornerRadius="10dp"
        app:cardElevation="8dp"
        android:layout_marginTop="16dp"
        app:cardBackgroundColor="@android:color/white">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/language"
            android:textSize="18sp"
            android:gravity="start"
            android:textColor="@color/not_so_black"
            android:background="@android:color/transparent"
            android:fontFamily="@font/inter_regular"/>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:cardCornerRadius="10dp"
        app:cardElevation="8dp"
        android:layout_marginTop="10dp"
        app:cardBackgroundColor="@android:color/white">

        <Button
            android:id="@+id/btn_contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contact_us"
            android:textSize="18sp"
            android:gravity="start"
            android:textColor="@color/not_so_black"
            android:background="@android:color/transparent"
            android:fontFamily="@font/inter_regular"/>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:cardCornerRadius="10dp"
        app:cardElevation="8dp"
        android:layout_marginTop="10dp"
        app:cardBackgroundColor="@android:color/white">

        <Button
            android:id="@+id/btn_about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about"
            android:textSize="18sp"
            android:gravity="start"
            android:textColor="@color/not_so_black"
            android:background="@android:color/transparent"
            android:fontFamily="@font/inter_regular"/>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:cardCornerRadius="10dp"
        app:cardElevation="8dp"
        android:layout_marginTop="10dp"
        app:cardBackgroundColor="@android:color/white">

        <Button
            android:id="@+id/btn_logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            android:textSize="18sp"
            android:gravity="center"
            android:textColor="@color/red"
            android:background="@android:color/transparent"
            android:fontFamily="@font/inter_bold"/>

    </androidx.cardview.widget.CardView>

</LinearLayout>
