<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.WelcomeActivity"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/white">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:contentDescription="@string/logo"
        tools:src="@tools:sample/avatars"
        android:layout_marginTop="40dp"
        android:layout_marginHorizontal="40dp"
        android:src="@drawable/register"/>

    <TextView
        android:id="@+id/tv_title_welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_welcome"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/inter_bold"/>

    <TextView
        android:id="@+id/sub_title_welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sub_title_welcome"
        android:textSize="17sp"
        android:gravity="center"
        android:layout_marginTop="2dp"
        android:fontFamily="@font/inter_regular"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/btn_google"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:cardCornerRadius="50dp"
        app:cardElevation="8dp"
        android:layout_marginTop="70dp"
        app:cardBackgroundColor="@color/purple">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="12dp"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/google"
                android:contentDescription="@string/logo"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/google"
                android:textSize="15sp"
                android:textColor="@color/not_so_black"
                android:layout_marginStart="8dp"
                android:gravity="center"
                android:fontFamily="@font/inter_bold"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>