<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.dictionary.HomeFragment"
    android:paddingTop="16dp"
    android:background="@color/white">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="24dp"
        app:cardBackgroundColor="@color/blue"
        app:cardCornerRadius="10dp"
        app:cardElevation="8dp"
        android:paddingHorizontal="16dp"
        android:layout_gravity="center_horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/hello"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hello"
                android:textColor="@color/not_so_black"
                android:textSize="20sp"
                android:fontFamily="@font/inter_regular"/>

            <TextView
                android:id="@+id/tv_user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:textColor="@color/not_so_black"
                android:textSize="20sp"
                android:textStyle="bold"
                android:fontFamily="@font/inter_bold"/>
        </LinearLayout>

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/iv_profile"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_gravity="end"
            android:layout_margin="10dp"
            android:layout_marginEnd="10dp"
            android:scaleType="centerCrop"
            tools:src="@tools:sample/avatars"
            app:riv_corner_radius="50dp" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_learn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/learn"
        android:textColor="@color/not_so_black"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="start"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/card_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:fontFamily="@font/inter_bold"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_menu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintTop_toBottomOf="@id/tv_learn"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:listitem="@layout/item_menu"/>

</LinearLayout>
